Dev (#20)
* un comment audit info scope

* fix audit fields, fix rawJson

* cherry pick feat/task_status

* fix audit field misses

* swagger | scripts

* remove tasks.is_completed - required changes

---------
